@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#2671] Feature: Add model::isEmpty
 - [#4591] Fix: Session::setInstance must be static
 - [#3996] Fix: Two tests of the templatehelperchild testcase fail
 - [#4501] Cleanup: Document the different return types of the mailer factory
